--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -35,6 +35,7 @@
     margin-bottom: 30px;
     border-radius: 5px;
     height: 165px;
+    box-sizing: border-box;
   }
 
   .cat-card:hover {
@@ -159,7 +160,6 @@
           justify-content: space-between;
           margin-bottom: 5px;
           height: 50px;
-          border: red solid 1px;
           padding-top: 5px;
           padding-bottom: 5px;
           box-sizing: border-box;
